--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --config ./jest.config.js --verbose --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "helmet": "^7.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
